--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -4,8 +4,7 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron: '10 16 * * *'
-    - cron: '10 4 * * *'
+    - cron: '5 8,20 * * *' # UTC+8 16,4
 jobs:
   update:
     runs-on: ubuntu-latest
